; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/t/extr_openssl.c_setup_sign_certificate.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/t/extr_openssl.c_setup_sign_certificate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RSA_PRIVATE_KEY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"failed to load private key\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @setup_sign_certificate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setup_sign_certificate(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32, i32* @RSA_PRIVATE_KEY, align 4
  %6 = load i32, i32* @RSA_PRIVATE_KEY, align 4
  %7 = call i64 @strlen(i32 %6)
  %8 = trunc i64 %7 to i32
  %9 = call i32* @BIO_new_mem_buf(i32 %5, i32 %8)
  store i32* %9, i32** %3, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = call i32* @PEM_read_bio_PrivateKey(i32* %10, i32* null, i32* null, i32* null)
  store i32* %11, i32** %4, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %1
  br label %15

15:                                               ; preds = %14, %1
  %16 = phi i1 [ true, %1 ], [ false, %14 ]
  %17 = zext i1 %16 to i32
  %18 = call i32 @assert(i32 %17)
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @BIO_free(i32* %19)
  %21 = load i32*, i32** %2, align 8
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @ptls_openssl_init_sign_certificate(i32* %21, i32* %22)
  %24 = load i32*, i32** %4, align 8
  %25 = call i32 @EVP_PKEY_free(i32* %24)
  ret void
}

declare dso_local i32* @BIO_new_mem_buf(i32, i32) #1

declare dso_local i64 @strlen(i32) #1

declare dso_local i32* @PEM_read_bio_PrivateKey(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @BIO_free(i32*) #1

declare dso_local i32 @ptls_openssl_init_sign_certificate(i32*, i32*) #1

declare dso_local i32 @EVP_PKEY_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
